styling and images

--- a/public/views/chandler.html
+++ b/public/views/chandler.html
@@ -1,4 +1,6 @@
 <div class="character-page">
 	<h2 class="name">Chandler Bing</h2>
 	<p class="quote"> {{chandlerQuote.data}} </p>
+	<img src="../img/chandler.png">
 </div>
+ 
