--- a/public/views/joey.html
+++ b/public/views/joey.html
@@ -1,4 +1,5 @@
 <div class="character-page">
 	<h2 class="name">Joey Tribbiani</h2>
 	<p class="quote"> {{joeyQuote.data}} </p>
+	<img src="../img/joey.jpg">
 </div>
