--- a/public/views/phoebe.html
+++ b/public/views/phoebe.html
@@ -1,4 +1,5 @@
 <div class="character-page">
 	<h2 class="name">Phoebe Buffay</h2>
 	<p class="quote"> {{phoebeQuote.data}} </p>
+	<img src="../img/phoebe.jpg">
 </div>
