--- a/public/views/rachel.html
+++ b/public/views/rachel.html
@@ -1,4 +1,5 @@
 <div class="character-page">
 	<h2 class="name">Rachel Green</h2>
 	<p class="quote"> {{rachelQuote.data}} </p>
+	<img src="../img/rachel.jpg">
 </div>
