--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,43 @@
 body {
+	margin: 0 auto;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+} 
+
+header {
+	max-width: 90%;
+	margin: 0 auto;
+}
+
+header h1 {
+	
+}
+
+header nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+header nav ul li {
+	display: inline;
+}
+
+header nav ul a {
+	text-decoration: none;
+}
+
+header nav ul a:hover {
 	color: red;
 }
+
+header nav ul a:selected {
+	color: blue;
+}
+
+.character-page {
+	width: 90%;
+	margin: 0 auto;
+}
+
+
