--- a/public/views/monica.html
+++ b/public/views/monica.html
@@ -1,4 +1,5 @@
 <div class="character-page">
 	<h2 class="name">Monica Geller</h2>
 	<p class="quote"> {{monicaQuote.data}} </p>
+	<img src="../img/monica.png">
 </div>
