--- a/public/views/ross.html
+++ b/public/views/ross.html
@@ -1,4 +1,5 @@
 <div class="character-page">
 	<h2 class="name">Ross Geller</h2>
 	<p class="quote"> {{rossQuote.data}} </p>
+	<img src="../img/ross.png">
 </div>
